# WebServer

./: .gitignore  CMakeLists.txt  DeleteSuccess.html  HttpServer.cpp  Makefile  MultiHttpServer.cpp  README.md  _main.cpp  a  a.cpp  a.out  a.txt  alpha.txt  autoindex.cpp  b.txt  cgi.md  copy_test.cpp  directoryListing.html  exampleOfHEADMethod.txt  file.conf  file.conf~f99dd6235d02e0ef60a5342edcad9b1a55685ade  getFormat.cpp  getMethod.cpp  handlingPostRequest.cpp  index.html  input  largeFile.txt  leaks.sh  locationHandling.cpp  log  main.cpp  new.conf  out  out.txt  out_file  out_file.html  p.cpp  parsingUtils.cpp  pp  script.php  (+12 more)
DefaultUploads/: error405.html  filecheck.txt  problem.txt
FilesForServing/: 0AsuCkVc5W.html  0NklLBM.html  0YORYhymtzW.html  0kHHi7qx.html  0mlTSa2.html  0seMVJKA.html  0xWwfQESYQ.html  129yvctV6MWS.html  13qUhrwX.html  15rTFe6z3dhL.html  1LWaPH.html  1e5nO1.html  1qyeXR5NQ8N.html  1szc6EF.html  1y033.html  26GNKI0PCBE.html  27DgGIkr.html  28VfTdCmf.html  2GM4fxfK.html  2J9Lg.html  2LNVc3.html  2RDwFbM2q.html  2SEvo.html  2W1BpafwTJ.html  2it2y0X.html  2tOWBs.html  34PU9Otd7buS.html  36GUXjxb.html  3Udpt1QtLNHh.html  3hWg2SH4d.html  3tOdOJ5RcVz.html  4mA1MG1PGqF.html  4qeKY0uByF0Z.html  5gmB1OXBSa8z.html  5kgydp8cpM.html  5mHxMcu8g.html  5tkD3q4ODh.html  5xYomGz.html  61Kin5xz.html  65kA0Pa.html  (+381 more)
FilesForServingGET/: 0EJdsXh6Ou.html  0b0mWBpnrb.html  1GLSxjSdcL.html  1nXS6ox1UR.html  649vor3G7Q.html  68sr1heUZ0.html  7bji6DQPrZ.html  83Pevyss5r.html  8LY1UtE6n6.html  8QOJMz4hux.html  8UVoq6Cvzz.html  9vnfSFj4Qh.html  A6xeoRulYu.html  B4PSSCZXpd.html  BWq4yuiNog.html  Bh5xP338xS.html  CbDJBehkVR.html  EDiPV8yrUg.html  EHhgcC0fY6.html  F4pRlBgYIK.html  FZXC0wg0Lv.html  FnjE8bCxSQ.html  Fv74LOLX4o.html  GQhsF71IEZ.html  Gn1CzV0T1p.html  GzqklsJeY4.html  HlJZjcAryS.html  LFIATEP167.html  LfGMxlfD0l.html  (+36 more)
(+95 files in other folders)
